external-crates/move/crates/move-compiler/tests/move_check/expansion/pack_no_fields_block_expr.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_block_expr.move:4:21
  │
4 │         let s = S { let x = 0; x };
  │                     ^^^
  │                     │
  │                     Unexpected 'let'
  │                     Expected an identifier

